# csvproject

./: CMakeLists.txt  README.md  sample.csv
csv/: CsvReader.cpp  CsvReader.h  CsvRow.h
main/: main.cpp
processing/: CsvAnalyzer.cpp  CsvAnalyzer.h  DataCleaner.cpp  DataCleaner.h
utils/: FileHasher.cpp  FileHasher.h
